--- a/css/style.css
+++ b/css/style.css
@@ -12,7 +12,8 @@ p {
 
 .content p {
   /* Keeps font-size consistent with root. */
-  font-size: 1rem; }
+  font-size: 1rem;
+  font-family: Georgia,serif; }
 
 /* 
 Scroll events don't trigger on vertical scrolling if overflow-x is applied to the body.
