--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,20 @@
 @import url(lib/normalize/normalize.css);
+@-webkit-keyframes fade-out {
+  to {
+    opacity: 0; } }
+
+@-webkit-keyframes fade-in {
+  to {
+    opacity: 1; } }
+
+.anim-fade-out {
+  -webkit-animation: fade-out 1s ease-out;
+  -webkit-animation-fill-mode: forwards; }
+
+.anim-fade-in {
+  -webkit-animation: fade-out 1s ease-out;
+  -webkit-animation-fill-mode: forwards; }
+
 html, body {
   height: 100%;
   width: 100%; }
@@ -23,7 +39,19 @@ Wrapping all content to prevent horizontal scrolling.
   overflow-x: hidden;
   /* Use font-size to scale the scenes. They are in ems */
   font-size: 100%;
-  background: black; }
+  background: black;
+  position: relative; }
+
+#trans {
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 9;
+  background-color: black;
+  opacity: 0; }
+  #trans.hidden {
+    visibility: hidden; }
 
 @-webkit-keyframes title-in {
   100% {
@@ -69,14 +97,15 @@ Wrapping all content to prevent horizontal scrolling.
     top: 0;
     right: 0;
     /*    -webkit-animation: flicker 8s infinite ease-in-out;*/
-    background: -webkit-radial-gradient(center center, ellipse cover, rgba(0, 0, 0, 0), black 40%);
-    background-color: rgba(0, 0, 0, 0);
+    /*    background: -webkit-radial-gradient(center center, ellipse cover, rgba(0,0,0,0), rgba(0, 0, 0, 1) 40%);*/
+    background-color: black;
+    opacity: 0;
     /* 
       Fake vignette with scaling because gradients can't be animated in CSS
       scale(1) for tight vignette
       scale(5+) for wide vignette
     */
-    -webkit-transform: scale(8); }
+    /*    -webkit-transform: scale(8);*/ }
 
 #scene2_1 {
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
