--- a/css/style.scss
+++ b/css/style.scss
@@ -1,4 +1,5 @@
 @import 'lib/normalize/normalize.css';
+@import '_animations';
 
 @mixin cat-shape($imagePath, $shape){
   -webkit-shape-outside: $shape;
@@ -46,6 +47,22 @@ Wrapping all content to prevent horizontal scrolling.
   /* Use font-size to scale the scenes. They are in ems */
   font-size: 100%;
   background: black;
+  position: relative;
+}
+
+#trans{
+  width: 100%;
+  height: 100%;
+  position: absolute;
+  top: 0;
+  z-index: 9;
+  
+  background-color: rgba(0,0,0,1);
+  opacity: 0;
+  
+  &.hidden{
+    visibility: hidden;
+  }
 }
 
 
@@ -105,15 +122,16 @@ Wrapping all content to prevent horizontal scrolling.
     right: 0;
 /*    -webkit-animation: flicker 8s infinite ease-in-out;*/
 
-    background: -webkit-radial-gradient(center center, ellipse cover, rgba(0,0,0,0), rgba(0, 0, 0, 1) 40%);
-    background-color: rgba(0,0,0,0);
+/*    background: -webkit-radial-gradient(center center, ellipse cover, rgba(0,0,0,0), rgba(0, 0, 0, 1) 40%);*/
+    background-color: rgba(0,0,0,1);
+    opacity: 0;
 
     /* 
       Fake vignette with scaling because gradients can't be animated in CSS
       scale(1) for tight vignette
       scale(5+) for wide vignette
     */
-    -webkit-transform: scale(8);
+/*    -webkit-transform: scale(8);*/
   }
   
 }
