--- a/css/style.scss
+++ b/css/style.scss
@@ -386,6 +386,56 @@ Wrapping all content to prevent horizontal scrolling.
     }
   }
   
+  .act6{
+    height: 40em;
+    width: 45em;
+    background: rgba(0,160,0,0.3);
+    left: 225em;
+    top: 25em;
+    
+    .cat_shape{  
+      width: 20.75em;
+      height: 20.75em;
+      font-size: 80%;
+      background: url(../images/cat_smiling/s04.png) top left no-repeat;
+      background-size: contain;
+      position: absolute;
+      left: 12rem;
+      z-index: 5;
+    }    
+    
+    .content-wrapper{
+      width: 100%;
+      height: 100%;
+      outline: 1px solid red;
+      position: relative;
+    }
+    
+    p{
+      -webkit-flow-into: act6-flow;
+    }
+    
+    .region{
+      -webkit-flow-from: act6-flow;
+    }
+    
+    #region1{
+      float: left;
+      width: 20em;
+      margin-top: 15%;
+      height: 80%;
+      outline: 1px solid lime;
+    }
+    #region2{
+      float: left;
+      margin-left: 1.5rem;
+      width: 20em;
+      margin-top: 10%;
+      height: 80%;
+      outline: 1px solid blue;
+    }
+  }
+  
 }
 
 
