--- a/css/style.scss
+++ b/css/style.scss
@@ -389,7 +389,6 @@ Wrapping all content to prevent horizontal scrolling.
   .act6{
     height: 40em;
     width: 45em;
-    background: rgba(0,160,0,0.3);
     left: 225em;
     top: 25em;
     
@@ -402,12 +401,14 @@ Wrapping all content to prevent horizontal scrolling.
       position: absolute;
       left: 12rem;
       z-index: 5;
+      
+      // subtle float animation
+      @extend .anim-floating
     }    
     
     .content-wrapper{
       width: 100%;
       height: 100%;
-      outline: 1px solid red;
       position: relative;
     }
     
@@ -424,18 +425,17 @@ Wrapping all content to prevent horizontal scrolling.
       width: 20em;
       margin-top: 15%;
       height: 80%;
-      outline: 1px solid lime;
+      -webkit-shape-inside: polygon(nonzero, 46px 0px, 206px 0px, 183px 74px, 200px 103px, 321px 158px, 321px 307px, 242px 328px, 242px 405px, 274px 448px, 207px 482px, 7px 465px);
     }
     #region2{
       float: left;
       margin-left: 1.5rem;
-      width: 20em;
+      width: 23em;
       margin-top: 10%;
-      height: 80%;
-      outline: 1px solid blue;
+      height: 50%;
+      -webkit-shape-inside: polygon(nonzero, 130px 58px, 76px 0px, 368px 0px, 324px 323px, 0px 320px, 0px 218px, 46px 187px, 90px 130px);
     }
   }
-  
 }
 
 
