--- a/css/style.css
+++ b/css/style.css
@@ -131,7 +131,7 @@ Wrapping all content to prevent horizontal scrolling.
     width: 62em;
     margin-left: 16em;
     height: 97.5em;
-    -webkit-shape-inside: polygon(22.69em 0em, 56.31em 0em, 58.06em 4.5em, 56.88em 9.94em, 58.06em 16.06em, 60.75em 21.38em, 58.94em 23.69em, 58.5em 26.44em, 59.06em 31.19em, 62.13em 32.38em, 60.44em 37.81em, 58.75em 38.56em, 57.69em 41.06em, 59.69em 46em, 55.06em 56.25em, 50.31em 62.13em, 45.69em 59.44em, 41.75em 63em, 38.69em 67em, 43.19em 69.94em, 46.5em 77.81em, 44.13em 97.56em, 0em 97.5em, 0em 91.38em, 3.5em 86.88em, 10.69em 84.25em, 13.63em 79.56em, 15.63em 78.31em, 16em 75.81em, 6.44em 74.88em, 6.19em 71.38em, 3.69em 65.38em, 18.19em 52em, 19.31em 49.94em, 26.69em 49.44em, 30.81em 45.13em, 34em 42.56em, 32.56em 40.31em, 30.63em 42.25em, 27.06em 38.25em, 27.88em 34.81em, 29.13em 33.25em, 28.56em 29.31em, 26.63em 28.25em, 28.19em 23.38em, 24.75em 18.19em, 25.81em 15.63em, 22.5em 8.69em, 21.88em 4.63em);
+    -webkit-shape-inside: polygon(nonzero, 363px 0px, 900px 0px, 928px 72px, 910px 159px, 928px 256px, 972px 342px, 943px 379px, 936px 423px, 944px 499px, 994px 518px, 967px 604px, 940px 616px, 923px 656px, 955px 736px, 880px 900px, 731px 951px, 668px 1008px, 619px 1072px, 691px 1119px, 744px 1244px, 706px 1560px, 0px 1560px, 0px 1462px, 56px 1390px, 171px 1348px, 218px 1272px, 250px 1252px, 256px 1212px, 113px 1172px, 79px 1055px, 308px 799px, 427px 791px, 560px 681px, 547px 645px, 446px 598px, 466px 532px, 456px 468px, 426px 452px, 451px 374px, 409px 292px, 412px 250px, 360px 139px, 350px 74px);
     /* TODO, investigate bug with shape-padding 16px+ / 1em+. Might be self-intersecting paths. */
     -webkit-shape-padding: 1.5em;
     padding-top: 2em; }
