--- a/css/style.scss
+++ b/css/style.scss
@@ -255,6 +255,12 @@ Wrapping all content to prevent horizontal scrolling.
     height: 48em;
     left: 71em;
     
+    .content-wrapper{
+      width: 100%;
+      height: 100%;
+      -webkit-shape-inside: polygon(nonzero, 113px 59px, 297px 161px, 368px 236px, 481px 261px, 479px 606px, 256px 541px, 113px 528px, 89px 414px);
+    }
+    
     .cat-shape{
       position: absolute;
       bottom: 0;
