--- a/css/style.scss
+++ b/css/style.scss
@@ -398,7 +398,7 @@ Wrapping all content to prevent horizontal scrolling.
     left: 225em;
     top: 25em;
     
-    .cat_shape{  
+    .cat-shape{  
       width: 20.75em;
       height: 20.75em;
       font-size: 80%;
