--- a/css/style.scss
+++ b/css/style.scss
@@ -20,6 +20,7 @@
 html, body{
   height: 100%;
   width: 100%;
+  //TODO: make background black
 }
 
 body{
@@ -42,7 +43,7 @@ Scroll events don't trigger on vertical scrolling if overflow-x is applied to th
 Wrapping all content to prevent horizontal scrolling. 
 */
 .wrapper{
-  overflow-x: hidden;
+/*  overflow-x: hidden;*/
   
   /* Use font-size to scale the scenes. They are in ems */
   font-size: 100%;
@@ -66,6 +67,7 @@ Wrapping all content to prevent horizontal scrolling.
 }
 
 
+// TODO: move to _animations.scss
 @-webkit-keyframes title-in{
   100% {
     opacity: 1;
@@ -138,6 +140,9 @@ Wrapping all content to prevent horizontal scrolling.
 
 
 #scene2_1{
+  // TODO: show when done working
+  display: none;
+ 
   background: url(../images/bg_scn2_part_r1_c1_s1.jpg) 0 top;
   background-size: 100%;
   width: 109em;
@@ -212,6 +217,9 @@ Wrapping all content to prevent horizontal scrolling.
 
 
 #scene2_2{
+  // TODO: show when done working
+  display: none;
+  
   background: black url(../images/bg_scn2_part_r2_c1_s1.jpg) 0 top no-repeat;
   background-size: 100%;
   width: 278.75em;
@@ -442,6 +450,14 @@ Wrapping all content to prevent horizontal scrolling.
       -webkit-shape-inside: polygon(nonzero, 130px 58px, 76px 0px, 368px 0px, 324px 323px, 0px 320px, 0px 218px, 46px 187px, 90px 130px);
     }
   }
+}
+
+#scene3{
+  width: 161em;
+  height: 172em;
+  background: url(../images/bg_scn-caterpillar-shroomless.jpg) top left no-repeat;
+  background: url(../images/bg_scn-caterpillar.jpg) top left no-repeat;
+  background-size: contain;
 }
 
 
