--- a/css/_animations.scss
+++ b/css/_animations.scss
@@ -35,6 +35,6 @@
 }
 
 .anim-floating{
-  -webkit-transfrom: translateZ(0);
+  -webkit-transform: translateZ(0);
   -webkit-animation: float 8s infinite ease-in-out;
 }
