alice falling acts in caterpillar scene

--- a/css/style.scss
+++ b/css/style.scss
@@ -77,6 +77,8 @@ Wrapping all content to prevent horizontal scrolling.
 
 #scene1{
   
+  display: none;
+  
   h1{
     font-size: 1em;
     margin: 0 auto 3em;
@@ -452,37 +454,61 @@ Wrapping all content to prevent horizontal scrolling.
   }
 }
 
+// TODO: swap scene2 and scene3 naming
 #scene3{
   width: 161em;
   height: 172em;
-  background: url(../images/bg_scn-caterpillar-shroomless.jpg) top left no-repeat;
+  
+  // TODO: use individual mushrooms for subtle animation
+/*  background: url(../images/bg_scn-caterpillar-shroomless.jpg) top left no-repeat;*/
   background: url(../images/bg_scn-caterpillar.jpg) top left no-repeat;
   background-size: contain;
+  
+  .decoration{
+    width: 55em;
+    height: 90em;
+    outline: 1px solid red;
+    position: relative;
+    margin-left: 20em;
+    
+    .alice-shape{   
+      position: absolute;
+      background: url(../images/alice_leaning.png) top left no-repeat;
+      background-size: contain;
+      width: 10.5em;
+      height: 22em;
+      -webkit-transform: translateZ(0);
+      
+      &.falling1{
+        right: 12em;                               
+        -webkit-transform: rotate(-45deg) scale(0.9);
+      }
+      
+      &.falling2{
+        top: 45em;
+        left: 20em;
+        -webkit-transform: rotate(-65deg) scale(0.9);
+      }
+
+      &.falling3{
+        top: 75em;
+        left: 18em;
+        -webkit-transform: rotate(-25deg) scale(0.9);
+      }
+      
+    }
+    
+  }
+  
+  .content{
+    width: 90em;
+    height: 40em;
+    margin-left: 20em;
+    outline: 1px solid lime;
+  }
+    
 }
 
-
-@-webkit-keyframes shadow-swivel1{
-  from{
-    -webkit-transform: rotateZ(-25deg);
-  }
-  50%{
-    -webkit-transform: rotateZ(-23deg);
-  }
-  to{
-    -webkit-transform: rotateZ(-25deg);
-  }
-}
-
-
-@-webkit-keyframes alice-act-in{
-  from{
-    -webkit-transform: rotateY(-20deg);
-  }
-  to{
-    opacity: 1;
-    -webkit-transform: rotateY(0);
-  }
-}
 
 .cat-shape1{
   @include cat-shape('../images/cat_falling1.png', polygon(1.38em -0.31em, 3.75em 2.25em, 7.25em 4.31em, 7.00em 7.19em, 8.19em 8.50em, 11.19em 7.13em, 11.75em 8.50em, 9.00em 10.88em, 7.44em 12.50em, 10.69em 14.50em, 12.06em 13.56em, 17.25em 14.75em, 21.19em 14.13em, 23.31em 13.56em, 24.63em 11.25em, 25.31em 14.38em, 26.75em 14.94em, 27.38em 17.31em, 29.63em 17.50em, 27.13em 19.88em, 25.56em 23.25em, 24.38em 27.38em, 20.06em 31.50em, 18.94em 30.75em, 11.69em 33.06em, 5.63em 31.56em, 2.19em 27.56em, 0.06em 22.69em, 3.13em 15.19em, 0.44em 12.44em, 1.94em 8.63em, 3.63em 5.94em, 1.88em 3.63em));
