--- a/css/style.scss
+++ b/css/style.scss
@@ -477,25 +477,25 @@ Wrapping all content to prevent horizontal scrolling.
       background-size: contain;
       width: 10.5em;
       height: 22em;
-      -webkit-transform: translateZ(0);
+      
+      $scale: 0.85;
       
       &.falling1{
         right: 12em;                               
-        -webkit-transform: rotate(-45deg) scale(0.9);
+        -webkit-transform: rotate(-45deg) scale($scale);
       }
       
       &.falling2{
         top: 45em;
         left: 20em;
-        -webkit-transform: rotate(-65deg) scale(0.9);
+        -webkit-transform: rotate(-65deg) scale($scale);
       }
 
       &.falling3{
         top: 75em;
         left: 18em;
-        -webkit-transform: rotate(-25deg) scale(0.9);
+        -webkit-transform: rotate(-25deg) scale($scale);
       }
-      
     }
     
   }
@@ -505,6 +505,47 @@ Wrapping all content to prevent horizontal scrolling.
     height: 40em;
     margin-left: 20em;
     outline: 1px solid lime;
+    position: relative;
+    
+    .act1{
+      outline: 1px solid blue;
+      height: 100%;
+      width: 17em;
+      left: 25em;
+      position: relative;
+      
+      .alice-shape{
+        position: absolute;
+        top: 6em;
+        width: 17em;
+        height: 14.375em;
+        background: url(../images/alice_seated.png) top left no-repeat;
+        background-size: contain;
+        outline: 1px solid lime;
+      }
+    }
+
+    .act2{
+      position: absolute;
+      outline: 1px solid purple;
+      height: 100%;
+      width: 40em;
+      left: 42em;
+      top: 0;
+      
+      .caterpillar-shape{
+        position: absolute;
+        width: 32.6em;
+        height: 19em;
+        top: 10em;
+        left: 5em;
+        background: url(../images/caterpillar-day.png) top left no-repeat;
+        background-size: contain;
+      }
+      
+    }
+    
+    
   }
     
 }
