--- a/css/style.css
+++ b/css/style.css
@@ -416,6 +416,35 @@ Wrapping all content to prevent horizontal scrolling.
       width: 40em;
       left: 42em;
       top: 0; }
+      #scene3 .content .act2 .shadow {
+        position: absolute;
+        -webkit-transform-origin: left top;
+        top: 0;
+        /*         -webkit-filter: blur(6px)*/ }
+      #scene3 .content .act2 .shadow1 {
+        width: 10em;
+        height: 60em;
+        left: 15em;
+        top: -10em;
+        -webkit-transform: rotate(50deg);
+        background: -webkit-linear-gradient(-90deg, rgba(0, 0, 0, 0.2), rgba(0, 0, 0, 0.1));
+        -webkit-animation: swiv1 8s infinite ease-in-out; }
+      #scene3 .content .act2 .shadow2 {
+        width: 10em;
+        height: 60em;
+        left: 18em;
+        top: -10em;
+        -webkit-transform: rotate(40deg);
+        background: -webkit-linear-gradient(left, rgba(0, 0, 0, 0.4) 40%, rgba(0, 0, 0, 0));
+        -webkit-animation: swiv2 8s 0.5s infinite ease-in-out; }
+      #scene3 .content .act2 .shadow3 {
+        width: 20em;
+        height: 60em;
+        left: 20em;
+        top: -10em;
+        -webkit-transform: rotate(32deg);
+        background: -webkit-linear-gradient(0deg, rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.3) 55%, rgba(0, 0, 0, 0) 90%);
+        -webkit-animation: swiv3 8s 1s infinite ease-in-out; }
       #scene3 .content .act2 .caterpillar-shape {
         position: absolute;
         width: 32.6em;
@@ -424,6 +453,18 @@ Wrapping all content to prevent horizontal scrolling.
         left: 5em;
         background: url(../images/caterpillar-day.png) top left no-repeat;
         background-size: contain; }
+
+@-webkit-keyframes swiv1 {
+  50% {
+    -webkit-transform: rotate(48deg); } }
+
+@-webkit-keyframes swiv2 {
+  50% {
+    -webkit-transform: rotate(38deg); } }
+
+@-webkit-keyframes swiv3 {
+  50% {
+    -webkit-transform: rotate(30deg); } }
 
 .cat-shape1 {
   -webkit-shape-outside: polygon(1.38em -0.31em, 3.75em 2.25em, 7.25em 4.31em, 7em 7.19em, 8.19em 8.5em, 11.19em 7.13em, 11.75em 8.5em, 9em 10.88em, 7.44em 12.5em, 10.69em 14.5em, 12.06em 13.56em, 17.25em 14.75em, 21.19em 14.13em, 23.31em 13.56em, 24.63em 11.25em, 25.31em 14.38em, 26.75em 14.94em, 27.38em 17.31em, 29.63em 17.5em, 27.13em 19.88em, 25.56em 23.25em, 24.38em 27.38em, 20.06em 31.5em, 18.94em 30.75em, 11.69em 33.06em, 5.63em 31.56em, 2.19em 27.56em, 0.06em 22.69em, 3.13em 15.19em, 0.44em 12.44em, 1.94em 8.63em, 3.63em 5.94em, 1.88em 3.63em);
